# MELTC

./: CMakeLists.txt  PartOfFile.cpp  hash  hash.cpp  hash_calculator.cpp  hash_calculator.h  kod.cpp  part  test.cpp
backand1/: CMakeLists.txt  PartOfFile.cpp  calculate_file_hash.cpp  kod.cpp
backand1/files/: cos.txt
backand1/src/: MyTests  file1.txt  file2.txt  file3another.txt  hash_calculator.cpp  hash_calculator.h  logic.cpp  logic.h  test.cpp
files/: PartOFFile  cos.txt  plik2.txt  podobna.txt  podobna1.txt  sin.txt
